scripts/include/notcurses.h

#define RESTRICT
#define RESTRICT restrict
#define static API
#define ALLOC __attribute__((malloc)) __attribute__((warn_unused_result))
struct notcurses; 
struct ncplane;   
static inline bool
ncchannels_bg_palindex_p(uint64_t channels){
  return ncchannel_palindex_p(ncchannels_bchannel(channels));
}
static inline uint64_t
ncchannels_set_fg_default(uint64_t* channels){
  uint32_t channel = ncchannels_fchannel(*channels);
  ncchannel_set_default(&channel);
  ncchannels_set_fchannel(channels, channel);
  return *channels;
}
static inline uint64_t
ncchannels_set_bg_default(uint64_t* channels){
  uint32_t channel = ncchannels_bchannel(*channels);
  ncchannel_set_default(&channel);
  ncchannels_set_bchannel(channels, channel);
  return *channels;
}
API int ncstrwidth(const char* egcs, int* validbytes, int* validwidth)
  __attribute__ ((nonnull (1)));
typedef struct nccell {
  uint32_t gcluster;          
  uint8_t gcluster_backstop;  
  uint8_t width;              
  uint16_t stylemask;         
  uint64_t channels;          
} nccell;
static inline void
nccell_init(nccell* c){
  memset(c, 0, sizeof(*c));
}
API int nccell_load(struct ncplane* n, nccell* c, const char* gcluster);
static inline int
nccell_prime(struct ncplane* n, nccell* c, const char* gcluster,
             uint16_t stylemask, uint64_t channels){
  c->stylemask = stylemask;
  c->channels = channels;
  int ret = nccell_load(n, c, gcluster);
  return ret;
}
static inline void
nccell_set_styles(nccell* c, unsigned stylebits){
  c->stylemask = stylebits & NCSTYLE_MASK;
}
static inline uint16_t
nccell_styles(const nccell* c){
  return c->stylemask;
}
static inline void
nccell_on_styles(nccell* c, unsigned stylebits){
  c->stylemask |= (uint16_t)(stylebits & NCSTYLE_MASK);
}
static inline void
nccell_off_styles(nccell* c, unsigned stylebits){
  c->stylemask &= (uint16_t)~(stylebits & NCSTYLE_MASK);
}
static inline void
nccell_set_fg_default(nccell* c){
  ncchannels_set_fg_default(&c->channels);
}
static inline void
nccell_set_bg_default(nccell* c){
  ncchannels_set_bg_default(&c->channels);
}
static inline int
nccell_set_fg_alpha(nccell* c, unsigned alpha){
  return ncchannels_set_fg_alpha(&c->channels, alpha);
}
static inline int
nccell_set_bg_alpha(nccell* c, unsigned alpha){
  return ncchannels_set_bg_alpha(&c->channels, alpha);
}
static inline uint64_t
nccell_set_bchannel(nccell* c, uint32_t channel){
  return ncchannels_set_bchannel(&c->channels, channel);
}
static inline uint64_t
nccell_set_fchannel(nccell* c, uint32_t channel){
  return ncchannels_set_fchannel(&c->channels, channel);
}
static inline uint64_t
nccell_set_channels(nccell* c, uint64_t channels){
  return ncchannels_set_channels(&c->channels, channels);
}
static inline bool
nccell_double_wide_p(const nccell* c){
  return (c->width >= 2);
}
static inline bool
nccell_wide_right_p(const nccell* c){
  return nccell_double_wide_p(c) && c->gcluster == 0;
}
static inline bool
nccell_wide_left_p(const nccell* c){
  return nccell_double_wide_p(c) && c->gcluster;
}
static inline uint64_t
nccell_channels(const nccell* c){
  return ncchannels_channels(c->channels);
}
static inline uint32_t
nccell_bchannel(const nccell* cl){
  return ncchannels_bchannel(cl->channels);
}
static inline uint32_t
nccell_fchannel(const nccell* cl){
  return ncchannels_fchannel(cl->channels);
}
static inline unsigned
nccell_cols(const nccell* c){
  return c->width ? c->width : 1;
}
ALLOC static inline char*
nccell_strdup(const struct ncplane* n, const nccell* c){
  return strdup(nccell_extended_gcluster(n, c));
}
static inline char*
nccell_extract(const struct ncplane* n, const nccell* c,
               uint16_t* stylemask, uint64_t* channels){
  if(stylemask){
    *stylemask = c->stylemask;
  }
  if(channels){
    *channels = c->channels;
  }
  return nccell_strdup(n, c);
}
static inline bool
nccellcmp(const struct ncplane* n1, const nccell* RESTRICT c1,
          const struct ncplane* n2, const nccell* RESTRICT c2){
  if(c1->stylemask != c2->stylemask){
    return true;
  }
  if(c1->channels != c2->channels){
    return true;
  }
  return strcmp(nccell_extended_gcluster(n1, c1), nccell_extended_gcluster(n2, c2));
}
static inline int
nccell_load_char(struct ncplane* n, nccell* c, char ch){
  char gcluster[2];
  gcluster[0] = ch;
  gcluster[1] = '\0';
  return nccell_load(n, c, gcluster);
}
static inline int
nccell_load_egc32(struct ncplane* n, nccell* c, uint32_t egc){
  char gcluster[sizeof(egc) + 1];
  egc = htole(egc);
  memcpy(gcluster, &egc, sizeof(egc));
  gcluster[4] = '\0';
  return nccell_load(n, c, gcluster);
}
static inline int
nccell_load_ucs32(struct ncplane* n, nccell* c, uint32_t u){
  unsigned char utf8[WCHAR_MAX_UTF8BYTES];
  if(notcurses_ucs32_to_utf8(&u, 1, utf8, sizeof(utf8)) < 0){
    return -1;
  }
  uint32_t utf8asegc;
  _Static_assert(WCHAR_MAX_UTF8BYTES == sizeof(utf8asegc),
                 "WCHAR_MAX_UTF8BYTES didn't equal sizeof(uint32_t)");
  memcpy(&utf8asegc, utf8, sizeof(utf8));
  return nccell_load_egc32(n, c, utf8asegc);
}
static inline struct ncplane*
notcurses_top(struct notcurses* n){
  return ncpile_top(notcurses_stdplane(n));
}
static inline struct ncplane*
notcurses_bottom(struct notcurses* n){
  return ncpile_bottom(notcurses_stdplane(n));
}
static inline int
notcurses_render(struct notcurses* nc){
  struct ncplane* stdn = notcurses_stdplane(nc);
  if(ncpile_render(stdn)){
    return -1;
  }
  return ncpile_rasterize(stdn);
}
static inline bool
nckey_mouse_p(uint32_t r){
  return r >= NCKEY_MOTION && r <= NCKEY_BUTTON11;
}
typedef enum {
  NCTYPE_UNKNOWN,
  NCTYPE_PRESS,
  NCTYPE_REPEAT,
  NCTYPE_RELEASE,
} ncintype_e;
typedef struct ncinput {
  uint32_t id;       
  int y, x;          
  char utf8[5];      
  bool alt;          
  bool shift;        
  bool ctrl;         
  ncintype_e evtype;
  unsigned modifiers;
  int ypx, xpx;      
} ncinput;
static inline bool
ncinput_shift_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_SHIFT);
}
static inline bool
ncinput_ctrl_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_CTRL);
}
static inline bool
ncinput_alt_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_ALT);
}
static inline bool
ncinput_meta_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_META);
}
static inline bool
ncinput_super_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_SUPER);
}
static inline bool
ncinput_hyper_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_HYPER);
}
static inline bool
ncinput_capslock_p(const ncinput* n){
  return (n->modifiers & NCKEY_MOD_CAPSLOCK);
}
API void ncplane_set_resizecb(struct ncplane* n, int(*resizecb)(struct ncplane*));
API int (*ncplane_resizecb(const struct ncplane* n))(struct ncplane*);