src/lib/LibNotcurses_ffi.jl


"""
    ncchannels_bg_palindex_p(channels)

Is the background using indexed palette color?
### Prototype
```c
static inline bool ncchannels_bg_palindex_p(uint64_t channels);
```
"""
function ncchannels_bg_palindex_p(channels)
    @ccall libnotcurses_ffi.ncchannels_bg_palindex_p(channels::UInt64)::Bool
end

"""
    ncchannels_set_fg_default(channels)

Mark the foreground channel as using its default color.
### Prototype
```c
static inline uint64_t ncchannels_set_fg_default(uint64_t* channels);
```
"""
function ncchannels_set_fg_default(channels)
    @ccall libnotcurses_ffi.ncchannels_set_fg_default(channels::Ptr{UInt64})::UInt64
end

"""
    ncchannels_set_bg_default(channels)

Mark the background channel as using its default color.
### Prototype
```c
static inline uint64_t ncchannels_set_bg_default(uint64_t* channels);
```
"""
function ncchannels_set_bg_default(channels)
    @ccall libnotcurses_ffi.ncchannels_set_bg_default(channels::Ptr{UInt64})::UInt64
end

"""
    nccell_init(c)


### Prototype
```c
static inline void nccell_init(nccell* c);
```
"""
function nccell_init(c)
    @ccall libnotcurses_ffi.nccell_init(c::Ptr{nccell})::Cvoid
end

"""
    nccell_prime(n, c, gcluster, stylemask, channels)

nccell_load(), plus blast the styling with 'attr' and 'channels'.
### Prototype
```c
static inline int nccell_prime(struct ncplane* n, nccell* c, const char* gcluster, uint16_t stylemask, uint64_t channels);
```
"""
function nccell_prime(n, c, gcluster, stylemask, channels)
    @ccall libnotcurses_ffi.nccell_prime(n::Ptr{ncplane}, c::Ptr{nccell}, gcluster::Ptr{Cchar}, stylemask::UInt16, channels::UInt64)::Cint
end

"""
    nccell_set_styles(c, stylebits)

Set the specified style bits for the nccell 'c', whether they're actively
supported or not. Only the lower 16 bits are meaningful.
### Prototype
```c
static inline void nccell_set_styles(nccell* c, unsigned stylebits);
```
"""
function nccell_set_styles(c, stylebits)
    @ccall libnotcurses_ffi.nccell_set_styles(c::Ptr{nccell}, stylebits::Cuint)::Cvoid
end

"""
    nccell_styles(c)

Extract the style bits from the nccell.
### Prototype
```c
static inline uint16_t nccell_styles(const nccell* c);
```
"""
function nccell_styles(c)
    @ccall libnotcurses_ffi.nccell_styles(c::Ptr{nccell})::UInt16
end

"""
    nccell_on_styles(c, stylebits)

Add the specified styles (in the LSBs) to the nccell's existing spec,
whether they're actively supported or not.
### Prototype
```c
static inline void nccell_on_styles(nccell* c, unsigned stylebits);
```
"""
function nccell_on_styles(c, stylebits)
    @ccall libnotcurses_ffi.nccell_on_styles(c::Ptr{nccell}, stylebits::Cuint)::Cvoid
end

"""
    nccell_off_styles(c, stylebits)

Remove the specified styles (in the LSBs) from the nccell's existing spec.
### Prototype
```c
static inline void nccell_off_styles(nccell* c, unsigned stylebits);
```
"""
function nccell_off_styles(c, stylebits)
    @ccall libnotcurses_ffi.nccell_off_styles(c::Ptr{nccell}, stylebits::Cuint)::Cvoid
end

"""
    nccell_set_fg_default(c)

Use the default color for the foreground.
### Prototype
```c
static inline void nccell_set_fg_default(nccell* c);
```
"""
function nccell_set_fg_default(c)
    @ccall libnotcurses_ffi.nccell_set_fg_default(c::Ptr{nccell})::Cvoid
end

"""
    nccell_set_bg_default(c)

Use the default color for the background.
### Prototype
```c
static inline void nccell_set_bg_default(nccell* c);
```
"""
function nccell_set_bg_default(c)
    @ccall libnotcurses_ffi.nccell_set_bg_default(c::Ptr{nccell})::Cvoid
end

"""
    nccell_set_fg_alpha(c, alpha)


### Prototype
```c
static inline int nccell_set_fg_alpha(nccell* c, unsigned alpha);
```
"""
function nccell_set_fg_alpha(c, alpha)
    @ccall libnotcurses_ffi.nccell_set_fg_alpha(c::Ptr{nccell}, alpha::Cuint)::Cint
end

"""
    nccell_set_bg_alpha(c, alpha)


### Prototype
```c
static inline int nccell_set_bg_alpha(nccell* c, unsigned alpha);
```
"""
function nccell_set_bg_alpha(c, alpha)
    @ccall libnotcurses_ffi.nccell_set_bg_alpha(c::Ptr{nccell}, alpha::Cuint)::Cint
end

"""
    nccell_set_bchannel(c, channel)


### Prototype
```c
static inline uint64_t nccell_set_bchannel(nccell* c, uint32_t channel);
```
"""
function nccell_set_bchannel(c, channel)
    @ccall libnotcurses_ffi.nccell_set_bchannel(c::Ptr{nccell}, channel::UInt32)::UInt64
end

"""
    nccell_set_fchannel(c, channel)


### Prototype
```c
static inline uint64_t nccell_set_fchannel(nccell* c, uint32_t channel);
```
"""
function nccell_set_fchannel(c, channel)
    @ccall libnotcurses_ffi.nccell_set_fchannel(c::Ptr{nccell}, channel::UInt32)::UInt64
end

"""
    nccell_set_channels(c, channels)


### Prototype
```c
static inline uint64_t nccell_set_channels(nccell* c, uint64_t channels);
```
"""
function nccell_set_channels(c, channels)
    @ccall libnotcurses_ffi.nccell_set_channels(c::Ptr{nccell}, channels::UInt64)::UInt64
end

"""
    nccell_double_wide_p(c)

Is the cell part of a multicolumn element?
### Prototype
```c
static inline bool nccell_double_wide_p(const nccell* c);
```
"""
function nccell_double_wide_p(c)
    @ccall libnotcurses_ffi.nccell_double_wide_p(c::Ptr{nccell})::Bool
end

"""
    nccell_wide_right_p(c)

Is this the right half of a wide character?
### Prototype
```c
static inline bool nccell_wide_right_p(const nccell* c);
```
"""
function nccell_wide_right_p(c)
    @ccall libnotcurses_ffi.nccell_wide_right_p(c::Ptr{nccell})::Bool
end

"""
    nccell_wide_left_p(c)

Is this the left half of a wide character?
### Prototype
```c
static inline bool nccell_wide_left_p(const nccell* c);
```
"""
function nccell_wide_left_p(c)
    @ccall libnotcurses_ffi.nccell_wide_left_p(c::Ptr{nccell})::Bool
end

"""
    nccell_channels(c)


### Prototype
```c
static inline uint64_t nccell_channels(const nccell* c);
```
"""
function nccell_channels(c)
    @ccall libnotcurses_ffi.nccell_channels(c::Ptr{nccell})::UInt64
end

"""
    nccell_bchannel(cl)

Extract the background alpha and coloring bits from a cell's channels
as a single 32-bit value.
### Prototype
```c
static inline uint32_t nccell_bchannel(const nccell* cl);
```
"""
function nccell_bchannel(cl)
    @ccall libnotcurses_ffi.nccell_bchannel(cl::Ptr{nccell})::UInt32
end

"""
    nccell_fchannel(cl)

Extract the foreground alpha and coloring bits from a cell's channels
as a single 32-bit value.
### Prototype
```c
static inline uint32_t nccell_fchannel(const nccell* cl);
```
"""
function nccell_fchannel(cl)
    @ccall libnotcurses_ffi.nccell_fchannel(cl::Ptr{nccell})::UInt32
end

"""
    nccell_cols(c)

return the number of columns occupied by 'c'. see ncstrwidth() for an
equivalent for multiple EGCs.
### Prototype
```c
static inline unsigned nccell_cols(const nccell* c);
```
"""
function nccell_cols(c)
    @ccall libnotcurses_ffi.nccell_cols(c::Ptr{nccell})::Cuint
end

"""
    nccell_strdup(n, c)

copy the UTF8-encoded EGC out of the nccell. the result is not tied to any
ncplane, and persists across erases / destruction.
### Prototype
```c
ALLOC static inline char* nccell_strdup(const struct ncplane* n, const nccell* c);
```
"""
function nccell_strdup(n, c)
    @ccall libnotcurses_ffi.nccell_strdup(n::Ptr{ncplane}, c::Ptr{nccell})::Ptr{Cchar}
end

"""
    nccell_extract(n, c, stylemask, channels)

Extract the three elements of a nccell.
### Prototype
```c
static inline char* nccell_extract(const struct ncplane* n, const nccell* c, uint16_t* stylemask, uint64_t* channels);
```
"""
function nccell_extract(n, c, stylemask, channels)
    @ccall libnotcurses_ffi.nccell_extract(n::Ptr{ncplane}, c::Ptr{nccell}, stylemask::Ptr{UInt16}, channels::Ptr{UInt64})::Ptr{Cchar}
end

"""
    nccellcmp(n1, c1, n2, c2)

Returns true if the two nccells are distinct EGCs, attributes, or channels.
The actual egcpool index needn't be the same--indeed, the planes needn't even
be the same. Only the expanded EGC must be equal. The EGC must be bit-equal;
it would probably be better to test whether they're Unicode-equal FIXME.
probably needs be fixed up for sprixels FIXME.
### Prototype
```c
static inline bool nccellcmp(const struct ncplane* n1, const nccell* RESTRICT c1, const struct ncplane* n2, const nccell* RESTRICT c2);
```
"""
function nccellcmp(n1, c1, n2, c2)
    @ccall libnotcurses_ffi.nccellcmp(n1::Ptr{ncplane}, c1::Ptr{nccell}, n2::Ptr{ncplane}, c2::Ptr{nccell})::Bool
end

"""
    nccell_load_char(n, c, ch)

Load a 7-bit char 'ch' into the nccell 'c'. Returns the number of bytes
used, or -1 on error.
### Prototype
```c
static inline int nccell_load_char(struct ncplane* n, nccell* c, char ch);
```
"""
function nccell_load_char(n, c, ch)
    @ccall libnotcurses_ffi.nccell_load_char(n::Ptr{ncplane}, c::Ptr{nccell}, ch::Cchar)::Cint
end

"""
    nccell_load_egc32(n, c, egc)

Load a UTF-8 encoded EGC of up to 4 bytes into the nccell 'c'. Returns the
number of bytes used, or -1 on error.
### Prototype
```c
static inline int nccell_load_egc32(struct ncplane* n, nccell* c, uint32_t egc);
```
"""
function nccell_load_egc32(n, c, egc)
    @ccall libnotcurses_ffi.nccell_load_egc32(n::Ptr{ncplane}, c::Ptr{nccell}, egc::UInt32)::Cint
end

"""
    nccell_load_ucs32(n, c, u)

Load a UCS-32 codepoint into the nccell 'c'. Returns the number of bytes
used, or -1 on error.
### Prototype
```c
static inline int nccell_load_ucs32(struct ncplane* n, nccell* c, uint32_t u);
```
"""
function nccell_load_ucs32(n, c, u)
    @ccall libnotcurses_ffi.nccell_load_ucs32(n::Ptr{ncplane}, c::Ptr{nccell}, u::UInt32)::Cint
end

"""
    notcurses_top(n)

Return the topmost plane of the standard pile.
### Prototype
```c
static inline struct ncplane* notcurses_top(struct notcurses* n);
```
"""
function notcurses_top(n)
    @ccall libnotcurses_ffi.notcurses_top(n::Ptr{notcurses})::Ptr{ncplane}
end

"""
    notcurses_bottom(n)

Return the bottommost plane of the standard pile.
### Prototype
```c
static inline struct ncplane* notcurses_bottom(struct notcurses* n);
```
"""
function notcurses_bottom(n)
    @ccall libnotcurses_ffi.notcurses_bottom(n::Ptr{notcurses})::Ptr{ncplane}
end

"""
    notcurses_render(nc)

Renders and rasterizes the standard pile in one shot. Blocking call.
### Prototype
```c
static inline int notcurses_render(struct notcurses* nc);
```
"""
function notcurses_render(nc)
    @ccall libnotcurses_ffi.notcurses_render(nc::Ptr{notcurses})::Cint
end

"""
    nckey_mouse_p(r)

Is the event a synthesized mouse event?
### Prototype
```c
static inline bool nckey_mouse_p(uint32_t r);
```
"""
function nckey_mouse_p(r)
    @ccall libnotcurses_ffi.nckey_mouse_p(r::UInt32)::Bool
end

"""
    ncinput_shift_p(n)


### Prototype
```c
static inline bool ncinput_shift_p(const ncinput* n);
```
"""
function ncinput_shift_p(n)
    @ccall libnotcurses_ffi.ncinput_shift_p(n::Ptr{ncinput})::Bool
end

"""
    ncinput_ctrl_p(n)


### Prototype
```c
static inline bool ncinput_ctrl_p(const ncinput* n);
```
"""
function ncinput_ctrl_p(n)
    @ccall libnotcurses_ffi.ncinput_ctrl_p(n::Ptr{ncinput})::Bool
end

"""
    ncinput_alt_p(n)


### Prototype
```c
static inline bool ncinput_alt_p(const ncinput* n);
```
"""
function ncinput_alt_p(n)
    @ccall libnotcurses_ffi.ncinput_alt_p(n::Ptr{ncinput})::Bool
end

"""
    ncinput_meta_p(n)


### Prototype
```c
static inline bool ncinput_meta_p(const ncinput* n);
```
"""
function ncinput_meta_p(n)
    @ccall libnotcurses_ffi.ncinput_meta_p(n::Ptr{ncinput})::Bool
end

"""
    ncinput_super_p(n)


### Prototype
```c
static inline bool ncinput_super_p(const ncinput* n);
```
"""
function ncinput_super_p(n)
    @ccall libnotcurses_ffi.ncinput_super_p(n::Ptr{ncinput})::Bool
end

"""
    ncinput_hyper_p(n)


### Prototype
```c
static inline bool ncinput_hyper_p(const ncinput* n);
```
"""
function ncinput_hyper_p(n)
    @ccall libnotcurses_ffi.ncinput_hyper_p(n::Ptr{ncinput})::Bool
end

"""
    ncinput_capslock_p(n)

